k8s/canary/service-canary.yml
apiVersion: v1
kind: Service
metadata:
  name: app-ge-canary-svc
  namespace: app
  labels:
    app: app-ge
    version: canary
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8000
      protocol: TCP
      name: http
  selector:
    app: app-ge
    version: canary
